<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layoutDirection="ltr"
    tools:context=".settings">

    <TextView
        android:id="@+id/titlesetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/broshk"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/backbtn_setting"
        app:layout_constraintStart_toEndOf="@+id/backbtn_setting"
        app:layout_constraintTop_toTopOf="@+id/backbtn_setting" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17761557" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06734007" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline31"
        app:layout_constraintEnd_toStartOf="@+id/guideline32"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline30"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/more" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/broshk"
        android:text="@string/changepassword"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/broshk"
        android:text="@string/langauges"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53535354" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/rateus"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5780023" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.647587" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.270073" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35766423" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/feedbackfiled"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9034792" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner"
        android:ems="10"
        android:fontFamily="@font/broshk"
        android:gravity="center"
        android:hint="@string/oldpass"
        android:inputType="textPassword"
        android:textColorHint="#572FCF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner"
        android:ems="10"
        android:fontFamily="@font/broshk"
        android:gravity="center"
        android:hint="@string/newpass"
        android:inputType="textPassword"
        android:textColor="#572FCF"
        android:textColorHint="#572FCF"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <EditText
        android:id="@+id/renewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner"
        android:ems="10"
        android:fontFamily="@font/broshk"
        android:gravity="center"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:textColor="#572FCF"
        android:textColorHint="#572FCF"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <EditText
        android:id="@+id/feedbackfiled"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner"
        android:ems="7"
        android:fontFamily="@font/broshk"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxEms="8"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/sendbtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:indeterminate="false"
        android:indeterminateOnly="false"
        android:max="5"
        android:numStars="5"
        android:progress="2"
        android:progressDrawable="@drawable/activelayerratingup"
        android:rating="2.0"
        android:stepSize="1.0"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />

    <Button
        android:id="@+id/backbtn_setting"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/left_arrow"
        app:iconSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="22dp"
        android:fontFamily="@font/broshk"
        android:text="@string/EN"
        android:textColor="#572FCF"
        android:textSize="28sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/arbtn"
        app:layout_constraintEnd_toStartOf="@+id/arbtn"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/arbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="auto"
        android:fontFamily="@font/broshk"
        android:text="@string/Ar"
        android:textColor="#572FCF"
        android:textSize="28sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toEndOf="@+id/enbtn"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/sendbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/broshk"
        android:text="@string/send"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/feedbackfiled" />

    <include
        android:id="@+id/splasher"
        layout="@layout/activity_splash"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>